fix: Fix spacing of nodes after an endNode in the tree view.

--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,8 @@ h3 {
 }
 
 .treeViewer .endNode {
-    padding-top: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     padding-left: 3px;
 }
 
